app/globals.css
:root {
  --body-margin-bottom: max(8px, env(safe-area-inset-bottom));
  --body-margin-left: max(8px, env(safe-area-inset-left));
  --body-margin-right: max(8px, env(safe-area-inset-right));
  --body-margin-top: max(8px, env(safe-area-inset-top));
}

*:after,
*:before {
  box-sizing: border-box;
}

body {
  margin: 0;
}

main {
  height: calc(100dvh - var(--body-margin-top) - var(--body-margin-bottom));
}

h1 {
  font-family: Times, serif;
}

p {
  margin: 0;
}

em {
  font-family: Times, serif;
  font-size: 18px;
}

a {
  color: #000;
  text-decoration: none;
}

footer {
  display: flex;
  background-color: oklch(0.97 0 0);
  border-top: 1px solid oklch(0.928 0.006 264.531);
  height: 48px;
  margin: 0 auto;
}

footer > div {
  display: flex;
  align-items: center;
  gap: 2px;
  padding: 0 10px;
  width: 575px;
}

footer > div > a {
  display: flex;
}

main > div:first-child ~ div {
  margin-top: 16px;
}

footer > div > a:first-of-type {
  margin-bottom: 1px;
}

footer > div > a:nth-of-type(2) {
  margin-left: 2px;
}

footer > div > a:nth-of-type(3) {
  margin-bottom: 1px;
  margin-left: 2px;
}

footer > div > a:last-of-type {
  transform: translateX(1px);
}

.page {
  margin-bottom: var(--body-margin-bottom);
  margin-left: var(--body-margin-left);
  margin-top: var(--body-margin-top);
  width: 575px;
}

.not-found {
  display: flex;
  align-items: center;
  justify-content: center;
}

.quote {
  font-size: 16px;
}

@media (width <= 600px) {
  .not-found,
  .page {
    margin-right: var(--body-margin-right);
  }
}

